--- a/public/bsbmd/plugins/bootstrap/css/bootstrap.css
+++ b/public/bsbmd/plugins/bootstrap/css/bootstrap.css
@@ -6521,8 +6521,6 @@ button.close {
 }
 .pull-right {
   float: right !important;
-  position: absolute;
-  right: -770px;
 }
 .pull-left {
   float: left !important;
